--- a/catalog.html
+++ b/catalog.html
@@ -10,23 +10,23 @@
 		<header class="main-header">
 			<div class="container">
 				<div class="header-logo">
-					<a href="index.html"><img src="img/logo.png" width="163" height="35" alt="device"></a>
+					<a href="index.html"><img src="img/logo.png" width="164" height="36" alt="device"></a>
 				</div>
 				<div class="user-block">
 					<form class="user-search" action="https://echo.htmlacademy.ru" method="get" >
 						<input type="search" name="search" placeholder="Поиск по сайту"> 
 						<input type="submit" value="Найти">
 					</form>
-					<ul>    
+					<ul class="user-nav">    
 						<li><a class="login" href="#">Войти</a></li>
 						<li><a class="сompare" href="#">Сравнить</a></li>
 						<li><a class="basket" href="#">Корзина</a></li>
 					</ul>
 				</div>
 				<nav class="main-nav">
-					<ul>
-						<li><a href="#">Каталог товаров</a>
-							<ul class="catalog">
+					<ul class="main-menu">
+						<li class="catalog"><a href="#">Каталог товаров</a>
+							<ul class="catalog-nav">
 								<li><a href="#">Виртуальная реальность</a></li>
 								<li><a href="#">Фитнес-браслеты</a></li>
 								<li><a href="#">Квардрокоптеры</a></li>
@@ -42,120 +42,124 @@
 				</nav>
 			</div>
 		</header>
-		<h1 class="breadcrumbs-title">Моноподы для селфи</h1>
-		<div class="breadcrumbs">
-			<ul>
-				<li><a href="#">Главная</a></li>
-				<li><a href="#">Каталог товаров</a></li>
-				<li class="current"><a href="#">Моноподы для селфи</a></li>
-			</ul>
+		<div class="container">
+			<h1 class="breadcrumbs-title">Моноподы для селфи</h1>
+			<div class="breadcrumbs">
+				<ul>
+					<li><a href="#">Главная</a></li>
+					<li><a href="#">Каталог товаров</a></li>
+					<li class="current"><a href="#">Моноподы для селфи</a></li>
+				</ul>
+			</div>
 		</div>
 		<main class="catalog-section">
-			<aside class="filter">
-				<header class="filter-header">
-					<h3>Фильтр:</h3>
-				</header>
-				<section class="filter-form">
-					<form action="https://echo.htmlacademy.ru" method="get">
-						<fieldset class="price">
-							<legend>Стоимость</legend>
-							<label for="price-id">Стоимость</label>
-							<input type="range" name="price" min="0" max="5000" step="1" id="price-id">
-							<span>от 0</span>
-							<span>до 5000</span>
-						</fieldset>
-						<fieldset class="color">
-							<legend>Цвет</legend>
-							<input type="checkbox" name="black" id="black">
-							<label for="black">Черный</label>
-							<input type="checkbox" name="white" id="white">
-							<label for="white">Белый</label>
-							<input type="checkbox" name="blue" id="blue">
-							<label for="blue">Синий</label>
-							<input type="checkbox" name="red" id="red">
-							<label for="red">Красный</label>
-							<input type="checkbox" name="pink" id="pink">
-							<label for="pink">Розовый</label>
-						</fieldset>
-						<fieldset class="bluetooth">
-							<legend>Bluetooth</legend>
-							<input type="radio" name="bluetooth" value="yes" id="bt-yes">
-							<label for="bt-yes">Есть</label>
-							<input type="radio" name="bluetooth" value="no" id="bt-no">
-							<label for="bt-no">Нет</label>
-						</fieldset>
-						<input type="submit" class="btn" value="Показать">
-					</form>
-				</section>
-			</aside>
-			<section class="sorting">
-				<header class="sorting-header">
-					<h3>Сортировка:</h3>
-					<ul class="sorting-option">
-						<li class="by-price"><a href="#">По цене</a></li>
-						<li class="by-type"><a href="#">По типу</a></li>
-						<li class="by-popular"><a href="#">По пулярности</a></li>
-					</ul>
-					<div class="">Прокрутка</div>
-				</header>
-				<div class="catalog">
-					<div class="catalog-items">
-						<div class="item">
-							<div class="item-card">
-								<img src="img/easy-selfie.jpg" width="360" height="380" alt="Любительская селфи-палка">
-								<ul>
-									<li><a class="btn" href="#">В корзину</a></li>
-									<li><a href="#">Добавить к сравнению</a></li>
-								</ul>
-							</div>
-							<span>Любительская селфи-палка</span>
-							<span class="price">500 руб.</span>
-						</div>
-						<div class="item">
-							<div class="item-card">
-								<img src="img/pro-selfie.jpg" width="360" height="380" alt="Профессиональная селфи-палка">
-								<ul>
-									<li><a class="btn" href="#">В корзину</a></li>
-									<li><a href="#">Добавить к сравнению</a></li>
-								</ul>
-							</div>
-							<span>Профессиональная селфи-палка</span>
-							<span class="price">1 500 руб.</span>
-						</div>
-						<div class="item">
-							<div>
-								<img src="img/underwater-selfie.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
-								<ul>
-									<li><a class="btn" href="#">В корзину</a></li>
-									<li><a href="#">Добавить к сравнению</a></li>
-								</ul>
-							</div>
-							<span>Непотопляемая селфи-палка</span>
-							<span class="price">2 500руб.</span>
-						</div>
-						<div class="item">
-							<div>
-								<img src="img/hand-selfie.jpg" width="360" height="380" alt="Селфи-палка Следуй за мной">
-								<ul>
-									<li><a class="btn" href="#">В корзину</a></li>
-									<li><a href="#">Добавить к сравнению</a></li>
-								</ul>
-							</div>
-							<span>Селфи палка Следуй за мной</span>
-							<span class="price">4 900 руб.</span>
-						</div>
-					</div>
-					<div class="paginator">
-						<ul>
-							<li><a class="prev" href="#prev">Назад</a></li>
-							<li><a href="#">1</a></li>
-							<li><a href="#">2</a></li>
-							<li><a href="#">3</a></li>
-							<li><a class="next" href="#next">Вперёд</a></li>
+			<div class="container">
+				<aside class="filter">
+					<header class="filter-header">
+						<h3>Фильтр:</h3>
+					</header>
+					<section class="filter-form">
+						<form action="https://echo.htmlacademy.ru" method="get">
+							<fieldset class="price">
+								<legend>Стоимость</legend>
+								<label for="price-id">Стоимость</label>
+								<input type="range" name="price" min="0" max="5000" step="1" id="price-id">
+								<span>от 0</span>
+								<span>до 5000</span>
+							</fieldset>
+							<fieldset class="color">
+								<legend>Цвет</legend>
+								<input type="checkbox" name="black" id="black">
+								<label for="black">Черный</label>
+								<input type="checkbox" name="white" id="white">
+								<label for="white">Белый</label>
+								<input type="checkbox" name="blue" id="blue">
+								<label for="blue">Синий</label>
+								<input type="checkbox" name="red" id="red">
+								<label for="red">Красный</label>
+								<input type="checkbox" name="pink" id="pink">
+								<label for="pink">Розовый</label>
+							</fieldset>
+							<fieldset class="bluetooth">
+								<legend>Bluetooth</legend>
+								<input type="radio" name="bluetooth" value="yes" id="bt-yes">
+								<label for="bt-yes">Есть</label>
+								<input type="radio" name="bluetooth" value="no" id="bt-no">
+								<label for="bt-no">Нет</label>
+							</fieldset>
+							<input type="submit" class="btn" value="Показать">
+						</form>
+					</section>
+				</aside>
+				<section class="sorting">
+					<header class="sorting-header">
+						<h3>Сортировка:</h3>
+						<ul class="sorting-option">
+							<li class="by-price"><a href="#">По цене</a></li>
+							<li class="by-type"><a href="#">По типу</a></li>
+							<li class="by-popular"><a href="#">По пулярности</a></li>
 						</ul>
+						<div class="">Прокрутка</div>
+					</header>
+					<div class="catalog">
+						<div class="catalog-items">
+							<div class="item">
+								<div class="item-card">
+									<img src="img/easy-selfie.jpg" width="360" height="380" alt="Любительская селфи-палка">
+									<ul>
+										<li><a class="btn" href="#">В корзину</a></li>
+										<li><a href="#">Добавить к сравнению</a></li>
+									</ul>
+								</div>
+								<span>Любительская селфи-палка</span>
+								<span class="price">500 руб.</span>
+							</div>
+							<div class="item">
+								<div class="item-card">
+									<img src="img/pro-selfie.jpg" width="360" height="380" alt="Профессиональная селфи-палка">
+									<ul>
+										<li><a class="btn" href="#">В корзину</a></li>
+										<li><a href="#">Добавить к сравнению</a></li>
+									</ul>
+								</div>
+								<span>Профессиональная селфи-палка</span>
+								<span class="price">1 500 руб.</span>
+							</div>
+							<div class="item">
+								<div>
+									<img src="img/underwater-selfie.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
+									<ul>
+										<li><a class="btn" href="#">В корзину</a></li>
+										<li><a href="#">Добавить к сравнению</a></li>
+									</ul>
+								</div>
+								<span>Непотопляемая селфи-палка</span>
+								<span class="price">2 500руб.</span>
+							</div>
+							<div class="item">
+								<div>
+									<img src="img/hand-selfie.jpg" width="360" height="380" alt="Селфи-палка Следуй за мной">
+									<ul>
+										<li><a class="btn" href="#">В корзину</a></li>
+										<li><a href="#">Добавить к сравнению</a></li>
+									</ul>
+								</div>
+								<span>Селфи палка Следуй за мной</span>
+								<span class="price">4 900 руб.</span>
+							</div>
+						</div>
+						<div class="paginator">
+							<ul>
+								<li><a class="prev" href="#prev">Назад</a></li>
+								<li><a href="#">1</a></li>
+								<li><a href="#">2</a></li>
+								<li><a href="#">3</a></li>
+								<li><a class="next" href="#next">Вперёд</a></li>
+							</ul>
+						</div>
 					</div>
-				</div>
-			</section>
+				</section>
+			</div>
 		</main>
 		<footer class="footer">
 			<div class="container">  
