--- a/index.html
+++ b/index.html
@@ -17,30 +17,30 @@
 						<input type="search" name="search" placeholder="Поиск по сайту"> 
 						<input type="submit" value="Найти">
 					</form>
-					<ul>    
+					<ul class="user-nav">    
 						<li><a class="login" href="#">Войти</a></li>
 						<li><a class="сompare" href="#">Сравнить</a></li>
 						<li><a class="basket" href="#">Корзина</a></li>
 					</ul>
-                    </div>
-                    <nav class="main-nav">
-                        <ul>
-                            <li><a href="catalog.html">Каталог товаров</a>
-								<ul class="catalog">
-									<li><a href="#">Виртуальная реальность</a></li>
-									<li><a href="#">Фитнес-браслеты</a></li>
-									<li><a href="#">Квардрокоптеры</a></li>
-									<li><a href="catalog.html">Моноподы для селфи</a></li>
-									<li><a href="#">Умные часы</a></li>
-									<li><a href="#">Экшн-камеры</a></li>        
-								</ul>
-                            </li>
-                            <li><a href="#">Доставка</a></li>
-                            <li><a href="#">Гарантия</a></li>
-                            <li><a href="#">Контакты</a></li>
-                        </ul>
-                    </nav>
-                </div>               
+				</div>
+				<nav class="main-nav">
+					<ul class="main-menu">
+						<li class="catalog"><a href="catalog.html">Каталог товаров</a>
+							<ul class="catalog-nav">
+								<li><a href="#">Виртуальная реальность</a></li>
+								<li><a href="#">Фитнес-браслеты</a></li>
+								<li><a href="#">Квардрокоптеры</a></li>
+								<li><a href="catalog.html">Моноподы для селфи</a></li>
+								<li><a href="#">Умные часы</a></li>
+								<li><a href="#">Экшн-камеры</a></li>        
+							</ul>
+						</li>
+						<li><a href="#">Доставка</a></li>
+						<li><a href="#">Гарантия</a></li>
+						<li><a href="#">Контакты</a></li>
+					</ul>
+				</nav>
+			</div>               
 		</header>
 		<div class="slider">
 			<div class="container">
@@ -58,7 +58,7 @@
 							<img src="img/monopod.png" width="384" height="486" alt="Монопод для селфи">
 						</div>
 						<div class="slide-feature">
-							<span>01</span>
+							<span class="number">01</span>
 							<h2 class="caption">Делай селфи,<br> как Бен Стиллер</h2>
 							<p>Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длсной и весом всего 5 килограмм.</p>
 							<a class="btn" href="#">Подробнее</a>
@@ -81,7 +81,7 @@
 							<img src="img/tracker.png" width="345" height="485" alt="Фитнес-браслет">
 						</div>
 						<div class="slide-feature">
-							<span>02</span>
+							<span class="number">02</span>
 							<h2 class="caption">Худеем<br> правильно!</h2>
 							<p>Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету</p>
 							<a class="btn" href="#">Подробнее</a>
@@ -100,7 +100,7 @@
 							<img src="img/quadrocopter.png" width="526" height="334" alt="Квадрокоптер">
 						</div>
 						<div class="slide-feature">
-							<span>03</span>
+							<span class="number">03</span>
 							<h2 class="caption">Порхает как бабочка,<br>жалит как пчела!</h2>
 							<p>Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
 							<a class="btn" href="#">Подробнее</a>
@@ -121,12 +121,12 @@
 		</div>
 		<section class="features">
 			<div class="container">
-				<ul>
+				<ul class="feature-list">
 					<li class="feature-item">
 						<a href="#">Виртуальная реальность</a>
 					</li>
 					<li class="feature-item">
-						<a href="catalog.html">Моноподы для селфи</a>
+						<a href="catalog.html">Моноподы<br> для селфи</a>
 					</li>
 					<li class="feature-item">
 						<a href="#">Экшн-камеры</a>
