--- a/index.html
+++ b/index.html
@@ -52,14 +52,13 @@
 					<label for="btn-2"></label>
 					<label for="btn-3"></label>
 				</div>
-				<div class="slider-inner">
-					<div class="slide">
+				<div class="slide">
 						<div class="slide-image">
 							<img src="img/monopod.png" width="384" height="486" alt="Монопод для селфи">
 						</div>
 						<div class="slide-feature">
 							<span class="number">01</span>
-							<h2 class="caption">Делай селфи,<br> как Бен Стиллер</h2>
+							<h2 class="caption">Делай селфи,<br> как Бен Стиллер!</h2>
 							<p>Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длсной и весом всего 5 килограмм.</p>
 							<a class="btn" href="#">Подробнее</a>
 							<table>
@@ -75,8 +74,8 @@
 								</tr>
 							</table>
 						</div>
-					</div>
-					<div class="slide">
+				</div>
+				<div class="slide">
 						<div class="slide-image">
 							<img src="img/tracker.png" width="345" height="485" alt="Фитнес-браслет">
 						</div>
@@ -94,8 +93,8 @@
 								</tr>
 							</table>
 						</div>
-					</div>
-					<div class="slide">
+				</div>
+				<div class="slide">
 						<div class="slide-image">
 							<img src="img/quadrocopter.png" width="526" height="334" alt="Квадрокоптер">
 						</div>
@@ -115,7 +114,6 @@
 								</tr>
 							</table>
 						</div>
-					</div>
 				</div>
 			</div>
 		</div>
@@ -145,15 +143,14 @@
 		</section>
 		<section class="services-slider">
 			<div class="container">
-				<input type="radio" id="btn-1" name="toggle" checked>
-				<input type="radio" id="btn-2" name="toggle">
-				<input type="radio" id="btn-3" name="toggle">
+				<input type="radio" id="btn-1" name="toggle2" checked>
+				<input type="radio" id="btn-2" name="toggle2">
+				<input type="radio" id="btn-3" name="toggle2">
 				<div class="services-controls">
 					<label for="btn-1">Доставка</label>
 					<label for="btn-2">Гарантия</label>
 					<label for="btn-3">Кредит</label>
 				</div>
-				<div class="services-inner">
 					<div class="services-slide">
 						<h2 class="caption">Доставка</h2>
 						<p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.</p>
@@ -166,7 +163,6 @@
 						<h2 class="caption">Кредит</h2>
 						<p>Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для нашего банка, разумеется.</p>
 					</div>
-				</div>
 			</div>
 		</section>
 		<section class="logotypes">
@@ -181,9 +177,9 @@
 			<div class="container">
 				<div class="about-us">
 					<h2 class="caption">О нас</h2>
-					<p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
-					<p>Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями:</p>
-					<ul>
+					<p class="title">Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
+					<p class="title">Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями:</p>
+					<ul class="about-features">
 						<li>Деловые Линии</li>
 						<li>Автотрейдинг</li>
 						<li>ЖилДорЭкспедиция</li>
@@ -192,7 +188,7 @@
 				</div>
 				<div class="contacts">
 					<h2 class="caption">Контакты</h2>
-					<p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
+					<p class="title">Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
 					<a href="#"><img class="map" src="img/map.jpg" width="560" height="222" alt="Я карта"></a>  
 					<a class="btn" href="#">Напишите нам</a>
 				</div>
