--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 						<input type="submit" value="Найти">
 					</form>
 					<ul class="user-nav">    
-						<li><a class="login" href="#">Войти</a></li>
+						<li class="item"><a class="login" href="#">Войти</a></li>
 						<li><a class="сompare" href="#">Сравнить</a></li>
 						<li><a class="basket" href="#">Корзина</a></li>
 					</ul>
@@ -35,9 +35,9 @@
 								<li><a href="#">Экшн-камеры</a></li>        
 							</ul>
 						</li>
-						<li><a href="#">Доставка</a></li>
-						<li><a href="#">Гарантия</a></li>
-						<li><a href="#">Контакты</a></li>
+						<li class="menu-delivery"><a href="#">Доставка</a></li>
+						<li class="menu-warranty"><a href="#">Гарантия</a></li>
+						<li class="menu-contacts"><a href="#">Контакты</a></li>
 					</ul>
 				</nav>
 			</div>               
@@ -59,15 +59,15 @@
 						<div class="slide-feature">
 							<span class="number">01</span>
 							<h2 class="caption">Делай селфи,<br> как Бен Стиллер!</h2>
-							<p>Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длсной и весом всего 5 килограмм.</p>
+							<p class="feature">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длсной и весом всего 5 килограмм.</p>
 							<a class="btn" href="#">Подробнее</a>
-							<table>
-								<tr>
-									<th>8,5 м</th>
-									<th>5 кг</th>
-									<th>Карбон</th>
+							<table class="feature-table">
+								<tr class="table-header">
+									<td>8,5 м</td>
+									<td>5 кг</td>
+									<td>Карбон</td>
 								</tr>
-								<tr>
+								<tr class="table-data">
 									<td>Длина палки</td>
 									<td>Вес палки</td>
 									<td>Материал</td>
@@ -82,13 +82,13 @@
 						<div class="slide-feature">
 							<span class="number">02</span>
 							<h2 class="caption">Худеем<br> правильно!</h2>
-							<p>Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету</p>
+							<p class="feature">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету</p>
 							<a class="btn" href="#">Подробнее</a>
-							<table>
-								<tr>
-									<th>48 часов</th>
+							<table class="feature-table">
+								<tr class="table-header">
+									<td>48 часов</td>
 								</tr>
-								<tr>
+								<tr class="table-data">
 									<td>Без подзарядки</td>
 								</tr>
 							</table>
@@ -101,14 +101,14 @@
 						<div class="slide-feature">
 							<span class="number">03</span>
 							<h2 class="caption">Порхает как бабочка,<br>жалит как пчела!</h2>
-							<p>Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
+							<p class="feature">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
 							<a class="btn" href="#">Подробнее</a>
-							<table>
-								<tr>
-									<th>800 м</th>
-									<th>Дальность полета</th>
+							<table class="feature-table">
+								<tr class="table-header">
+									<td>800 м</td>
+									<td>Дальность полета</td>
 								</tr>
-								<tr>
+								<tr class="table-data">
 									<td>50 м</td>
 									<td>Радиус поражения</td>
 								</tr>
@@ -200,30 +200,28 @@
 					<div class="footer-logo">
 						<a href="#"><img src="img/logo-footer.png" width="163" height="36" alt="device"></a>
 					</div>
-					<ul>    
+					<ul class="footer-nav">    
 						<li><a class="login" href="#">Войти</a></li>
 						<li><a class="сompare" href="#">Сравнить</a> </li>
-						<li><a class="Basket" href="#">Корзина</a></li>
+						<li><a class="basket" href="#">Корзина</a></li>
 					</ul>    
 				</div>
 				<div class="footer-middle">
 					<p>г. Москва, ул. Строителей, 15</p>
-					<div class="footer-nav">
-						<ul>
+					<ul class="footer-nav">
 							<li><a href="#">Доставка</a></li>
 							<li><a href="#">Гарантия</a></li>
 							<li><a href="#">Контакты</a></li>
-						</ul>
-					</div>
+					</ul>
 					<p>Тел.: +7 (495) 495-95-95</p>
 				</div>
 				<div class="footer-bottom">
 					<div class="footer-social">
-						<a class="social-btn fb" href="https://facebook.com/">Фейсбук</a>
-						<a class="social-btn inst" href="https://instagram.com/">Инстаграм</a>
-						<a class="social-btn tw" href="https://twitter.com/">Твиттер</a>
+						<a class="social-btn" href="https://facebook.com/">Фейсбук</a>
+						<a class="social-btn" href="https://instagram.com/">Инстаграм</a>
+						<a class="social-btn" href="https://twitter.com/">Твиттер</a>
 					</div>
-					<a class="htmlacademy" href="https://htmlacademy.ru/"><img src="img/htmlacademy.svg" width="27" height="34" alt="htmlacademy"></a>
+					<a class="htmlacademy" href="https://htmlacademy.ru/"><img src="img/htmlacademy.png" width="27" height="34" alt="htmlacademy"></a>
 				</div>
 			</div>
 		</footer>
