--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 			<div class="container">  
 				<div class="footer-top">
 					<div class="footer-logo">
-						<a href="#"><img src="img/logo-footer.png" width="163" height="36" alt="device"></a>
+						<a href="index.html"><img src="img/logo-footer.png" width="163" height="36" alt="device"></a>
 					</div>
 					<ul class="footer-nav">    
 						<li><a class="login" href="#">Войти</a></li>
