--- a/catalog.html
+++ b/catalog.html
@@ -5,6 +5,7 @@
 		<title>HTML Academy: Девайс-Моноподы для селфи</title>
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/style.css">
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans:300&amp;subset=cyrillic" rel="stylesheet">
 	</head>
 	<body>
 		<header class="main-header">
@@ -18,7 +19,7 @@
 						<input type="submit" value="Найти">
 					</form>
 					<ul class="user-nav">    
-						<li class="item"><a class="login" href="#">Войти</a></li>
+						<li><a class="login" href="#">Войти</a></li>
 						<li><a class="сompare" href="#">Сравнить</a></li>
 						<li><a class="basket" href="#">Корзина</a></li>
 					</ul>
