--- a/index.html
+++ b/index.html
@@ -171,10 +171,10 @@
 		</section>
 		<section class="logotypes">
 			<div class="container">
-				<a class="logo dji" href="http://www.dji.com/"><img src="img/dji.jpg" width="260" height="100" alt="dji"></a>
-				<a class="logo sp-gadgets" href="https://www.sp-gadgets.com"><img src="img/spg.jpg" width="260" height="100" alt="sp-gadgets"></a> 
-				<a class="logo go-pro" href="https://gopro.com"><img src="img/gp.jpg" width="260" height="100" alt="lj-pro"></a>
-				<a class="logo vive" href="https://www.vive.com"><img src="img/vive.jpg" width="260" height="100" alt="vive"></a>
+				<a class="logo dji" href="http://www.dji.com/">dji</a>
+				<a class="logo sp-gadgets" href="https://www.sp-gadgets.com">sp-gadgets</a> 
+				<a class="logo go-pro" href="https://gopro.com">lj-pro</a>
+				<a class="logo vive" href="https://www.vive.com">vive</a>
 			</div>
 		</section>
 		<section class="about">
